[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btcvsm7"
version = "0.1.0"
description = "BTC vs Magnificent 7 相对强弱指数分析工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "python-dotenv>=1.0.0",
    "twelvedata>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
